# octopus

./: .codecov.yml  .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  INSTALL  Make.i686  Makefile  Makefile.am  Makefile.in  PACKAGING  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  automake  build-cuda.sh  build-no-cuda.sh  check-cuda.sh  check-no-cuda.sh  config.status  configure  configure.ac  configure.in  fortran90.m4  libtool
doc/: .cvsignore  Makefile  Makefile.am  Makefile.in  authors.texi  copying.texi  description.texi  examples.texi  external.texi  gaussian.eps  index.texi  installation.texi  introduction.texi  oct-atomic_occupations.pod  oct-broad.pod  oct-casida_spectrum.pod  oct-center-geom.pod  oct-cross-section.pod  oct-display_partitions.pod  oct-harmonic-spectrum.pod  oct-ph.pod  oct-propagation_spectrum.pod  oct-rotatory_strength.pod  oct-rsf.pod  oct-run_periodic_table.pod  oct-run_regression_test.pl.pod  oct-run_testsuite.pod  oct-run_testsuite.sh.pod  oct-vibrational.pod  oct-vibrational_spectrum.pod  oct-xyz-anim.pod  octopus-devel.info  octopus-devel.texi  octopus-faq.info  octopus-faq.texi  octopus.dvi  octopus.info  octopus.info-1  octopus.info-2  octopus.info-3  (+10 more)
doc/doxygen/: Doxyfile  create_documentation.sh  index.html  menu.html
doc/html/: Makefile.am  vars.php  varsLeftFrame.php  varsRightFrame.html  varsRightFrame.html.in
doc/img/: cosine.eps  cover.ps  elf.eps  laser.eps  octosex.eps  pi02.eps  pi03.eps  pi04.eps  spacing.eps  spacing.ps
doc/pdf/: Makefile.am
external_libs/bader/: Makefile.am  bader_mod.f90  charge_mod.f90  chgcar_mod.f90  command_arg.f90  cube_mod.f90  io_mod.f90  ions_mod.f90  kind_mod.f90  main.f90  matrix_mod.f90  multipole_mod.f90  options_mod.f90  results_mod.f90  voronoi_mod.f90
external_libs/bpdn/: Makefile.am  Makefile.in  bpdn.f90  expmm.c  heap.h  oneProjectorCore.c  spgl1_projector.c
external_libs/dftd3/: Makefile.am  api.f90  core.f90  pars.f90
external_libs/fortrancl/: Makefile.am  cl.F90  clAmdBlas.f90  cl_buffer.F90  cl_buffer_low.c  cl_command_queue.F90  cl_command_queue.f90  cl_command_queue_low.c  cl_constants.F90  cl_context.F90  cl_context_low.c  cl_device.F90  cl_device_low.c  cl_functions.F90  cl_kernel.F90  cl_kernel.f90  cl_kernel_low.c  cl_low.c  cl_platform.F90  cl_platform_low.c  cl_program.F90  cl_program_low.c  cl_types.F90  clamdblas.f90  clamdblas_low.c  clamdfft.f90  clamdfft_low.c  clblas.f90  clblas_low.c  clfft.f90  clfft_low.c
external_libs/isf/: Makefile.am  README
external_libs/libnbc/: CHANGELOG  CMakeFortran.txt  CMakeLists.txt  Makefile  Makefile.am  README  configure.params  dict.c  dict.h  dict_private.h  hb_tree.c  hb_tree.h  main.c  nbc.c  nbc.h  nbc_fortran.c  nbc_fortran.h  nbc_iallgather.c  nbc_iallgatherv.c  nbc_iallreduce.c  nbc_ialltoall.c  nbc_ialltoallv.c  nbc_ibarrier.c  nbc_ibcast.c  nbc_igather.c  nbc_igatherv.c  nbc_ireduce.c  nbc_ireduce_scatter.c  nbc_iscan.c  nbc_iscatter.c  nbc_iscatterv.c  nbc_op.c  nbc_op.c.m4  nbcf.c  ompi_component.c  ompi_component.h
external_libs/metis-5.1/: Makefile.am
external_libs/newuoa/: Makefile.am  bigden.f90  biglag.f90  newuoa.f90  newuoa_mod.f90  newuob.f90  trsapp.f90  update.f90
external_libs/poisson_isf/: Build_Kernel.f90  Makefile  Makefile.am  PSolver_Kernel.f90  README  fft3d.f90  gequad.f  gequad.f90  lazy_100.inc  lazy_30.inc  lazy_40.inc  lazy_8.inc  lazy_filters.m  pconv.F90  pconv.f90  perfdata.inc  pfft3d.F90  pfft3d.f90  scaling_function.f90  smooth.f90
external_libs/psolver-1.8/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  psolver.pc.in
external_libs/qshep/: COPYING  Makefile.am  qshep2d.f90  qshep3d.f90  qshepmod.f90
external_libs/slatec/: Makefile  Makefile.am  Makefile.in  d1mach.f90  daxpy.f90  dcgs.f90  dchkw.f90  ddot.f90  dnrm2.f90  ds2y.f90  dsilus.f90  dslucs.f90  dslui.f90  dslui2.f90  dsmv.f90  fdump.f90  i1mach.f90  isdcgs.f90  j4save.f90  qs2i1d.f90  xercnt.f90  xerhlt.f90  xermsg.f90  xerprn.f90  xersve.f90  xgetua.f90
liboct/: .cvsignore  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  dablas.c  f77_func.h  geom_opt.c  grammar.c  grammar.y  interface.c  io_binary.c  liboct.h  liboct_parser.h  main.c  math.c  oct_f.c  oct_gdlib_f.c  oct_gsl_f.c  operate.c  operate_vec.c  parse.c  parse_exp.c  parser.h  parser_f.c  poisson_finite_cyl.c  recipes.c  recipes.c~  signals.c  string_f.c  string_f.h  symbols.c  symbols.h  varia.c  varia.h  varinfo.c  write_iter.c  ylm.c
liboct_parser/: Makefile.am  grammar.c  grammar.y  gsl_userdef.c  gsl_userdef.h  liboct_parser.h  parse.c  parse_exp.c  parser_f.c  string_f.c  string_f.h  symbols.c  symbols.h
libstring_f/: ChangeLog  Makefile.am  README  configure.ac  string_f.c  string_f.h
perl/: Makefile.am  oct-analyze_projections  oct-analyze_projections.pl  oct-check-deallocs  oct-vdW_c6  oct-vdW_c6.pl  oct_analyze_projections.pl
python/: .cvsignore  COPYING  Makefile.am  configure.ac  octopus-gui.in  octopus-gui.in.in  setup.py.in  var2xml.py.in  var2xml.py.in.in
share/: .cvsignore  Makefile.am  Makefile.in  filter_mask.data  gequad.data  logo  marching_cubes_edges.data  marching_cubes_triangles.data  variables  variables.local  varinfo
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  adv_linalg.F90  asinh.F90  atom.F90  atomic.F90  atoms_magnet.F90  basic_linalg.F90  basic_linalg_blas.F90  basic_linalg_int.F90  basins.F90  blas.F90  broad.F90  casida.F90  casida_inc.F90  centergeom.F90  cf.F90  cf_inc.F90  choose_st.F90  command_line.F90  common-rules.make  complex.F90  config.h  config.h.in  config_F90.h  cross_section.F90  crystal.F90  curv_briggs.F90  curv_gygi.F90  curv_modine.F90  curvlinear.F90  datasets.F90  derivatives.F90  derivatives_inc.F90  double_grid.F90  double_grid_apply.F90  double_grid_data.F90  dx.F90  (+271 more)
testsuite/: .cvsignore  Makefile.am  README  TestGroups  buildbot_query.pl  fix_testsuite.py  oct-run_regression_test.pl  oct-run_regression_test.pl.pod  oct-run_testsuite  oct-run_testsuite.in  oct-run_testsuite.sh.in  run_regression.pl
(+5710 files in other folders)
